Added missing pieces & base JS

--- a/_pages/en/partnership-schema.html
+++ b/_pages/en/partnership-schema.html
@@ -1,9 +1,9 @@
 ---
 layout: schema
-ref: futureProjectSchema
+ref: partnershipSchema
 lang: en
-permalink: /en/future-project-schema.html
-config: config-futureProject
+permalink: /en/partnership-schema.html
+config: config-partnership
 ---
 
 <h1 property="name" id="wb-cont"><span style="background:yellow;">Lorem ipsum (schema title english)</span></h1>
@@ -11,4 +11,4 @@ config: config-futureProject
 
 <h2>Version 1.0</h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
-<p>We've created an <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/futureproject_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
+<p>We've created an <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/partnership_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
