--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -20,53 +20,75 @@ permalink: /fr/index.html
     <h1 property="name">Services</h1>
     <p>Cette plateforme offre trois services principaux basés sur le partage de solutions dans un format source ouverte. Le terme source ouverte réfère aux éléments librement accessibles au public pour des fins d’utilisation, modification et redistribution.</p>
   </div>
-  <div class="col-md-4">
-    <section class="panel panel-info">
-      <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Code source ouvert</h5></a>
-      </header>
-      <div class="panel-body mrgn-bttm-md">
-        <div class="col-md-3 font-size-50" style="color: #31708f">
-          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
+
+  <div class="row wb-eqht">
+    <div class="col-md-6">
+      <section class="panel panel-info hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Code source ouvert</h5></a>
+        </header>
+        <div class="panel-body mrgn-bttm-md">
+          <div class="col-md-3 font-size-50" style="color: #31708f">
+            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Consultez les projets source ouverts développés par les niveaux du Gouvernement Canadien.</p>
+          </div>
         </div>
-        <div class="col-md-9">
-          <p>Consultez les projets source ouverte développés par les niveaux du Gouvernement Canadien.</p>
+      </section>
+    </div>
+
+    <div class="col-md-6">
+      <section class="panel panel-success hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Logiciels libres</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #3c763d">
+            <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Consultez les logiciels libres utilisés par les niveaux du Gouvernement Canadien.</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
 
-  <div class="col-md-4">
-    <section class="panel panel-success">
-      <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Logiciels libres</h5></a>
-      </header>
-      <div class="panel-body mrgn-bttm-xl">
-        <div class="col-md-3 font-size-50" style="color: #3c763d">
-          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
+  <div class="row wb-eqht">
+    <div class="col-md-6">
+      <section class="panel panel-warning hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Normes ouvertes</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #8a6d3b">
+            <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Consultez les normes ouvertes utilisées par les niveaux du Gouvernement Canadien.</p>
+          </div>
         </div>
-        <div class="col-md-9">
-          <p>Consultez les logiciels libres utilisés par les niveaux du Gouvernement Canadien.</p>
+      </section>
+    </div>
+
+    <div class="col-md-6">
+      <section class="panel panel-warning hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Partenariats</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #a94442">
+            <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><i class="far fa-handshake"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Consultez et collaborer sur les projets source ouverts en recherche de partenaires et d'investisseurs.</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
 
-  <div class="col-md-4">
-    <section class="panel panel-warning">
-      <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Normes ouvertes</h5></a>
-      </header>
-      <div class="panel-body mrgn-bttm-xl">
-        <div class="col-md-3 font-size-50" style="color: #8a6d3b">
-          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
-        </div>
-        <div class="col-md-9">
-          <p>Consultez les normes ouvertes utilisées par les niveaux du Gouvernement Canadien.</p>
-        </div>
-      </div>
-    </section>
-  </div>
   <div class="col-md-12">
     <p>Vous pouvez consulter <strong>notre guide</strong> de l'utilsateur pour savoir <a href="./docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour vous aider à rechercher des solutions numériques ouvertes et à partager de nouveaux projets ouverts.</p>
   </div>
