--- a/_pages/fr/partenariat-schema.html
+++ b/_pages/fr/partenariat-schema.html
@@ -1,9 +1,9 @@
 ---
 layout: schema
-ref: futureProjectSchema
+ref: partnershipSchema
 lang: fr
-permalink: /fr/projet-futur-schema.html
-config: config-futureProject
+permalink: /fr/partenariat-schema.html
+config: config-partnership
 ---
 
 <h1 property="name" id="wb-cont">Lorem ipsum (schema title french)</h1>
