--- a/_pages/en/partnership-form.html
+++ b/_pages/en/partnership-form.html
@@ -1,9 +1,9 @@
 ---
 layout: form
-ref: futureProjectForm
+ref: partnershipForm
 lang: en
-permalink: /en/future-project-formulaire.html
-config: config-futureProject
+permalink: /en/partnership-form.html
+config: config-partnership
 ---
 
 <h1 property="name" id="wb-cont">Looking for Partners Form</h1>
