--- a/_pages/en/partnership-schema.html
+++ b/_pages/en/partnership-schema.html
@@ -6,7 +6,8 @@ permalink: /en/partnership-schema.html
 config: config-partnership
 ---
 
-<h1 property="name" id="wb-cont"><span style="background:yellow;">Lorem ipsum (schema title english)</span></h1>
+<h1 property="name" id="wb-cont">Metadata Schema for Partnership projects</h1>
+<p>The metadata schema for <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}">{{ site.data.i18n.general.nav.partnership[page.lang] }}</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0</h2>
