Updated partnership form link in doc

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -87,7 +87,7 @@ permalink: /en/docs.html
           </ul>
           <p>Search this catalogue for project ideas aligned with your objectives and needs. <strong>If you’re interested in becoming a partnering group</strong> on a specific project, contact the public administration that owns the project. You can find the contact information using the hyperlink of the project’s name.</p>
           <p><strong>How to add a new project or update the information of a project in the catalog</strong></p>
-          <p>Whether you’re an administration looking for partners and investors to collaborate on your new project or an administration that already added its project to the catalog, you're free to update the list of open projects by submitting the <a href="./looking-for-partners-form.html">Looking for Partners Form</a>. The form will allow us to identify your request of adding or updating a project, analyze it and execute it</p>
+          <p>Whether you’re an administration looking for partners and investors to collaborate on your new project or an administration that already added its project to the catalog, you're free to update the list of open projects by submitting the <a href="./partnership-form.html">Looking for Partners Form</a>. The form will allow us to identify your request of adding or updating a project, analyze it and execute it</p>
         </details>
       </li>
     </ul>
