--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -18,7 +18,7 @@ permalink: /en/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>The Open Resource Exchange includes three main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
+    <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
   </div>
 
   <div class="row wb-eqht">
