Text changes in code repo groups page

--- a/_pages/en/open-source-code-groups.html
+++ b/_pages/en/open-source-code-groups.html
@@ -4,7 +4,7 @@ ref: codeGroups
 lang: en
 permalink: /en/open-source-code-groups.html
 ---
-<h1 property="name" id="wb-cont">Open Source Code Groups</h1>
-<p>Canadian public administrations at the federal, provincial, territorial and municipal level use Github, Gitlab and others code repositories to contribute to open source code.</p>
+<h1 property="name" id="wb-cont">List of repositories per public administration</h1>
+<p>Search the list of open source repositories of canadian public administrations at the federal, provincial, municipal and aboriginal levels.</p>
 
 {% include codeRepoGroups.html %}
