--- a/_pages/fr/code-source-ouvert-groupes.html
+++ b/_pages/fr/code-source-ouvert-groupes.html
@@ -4,7 +4,7 @@ ref: codeGroups
 lang: fr
 permalink: /fr/code-source-ouvert-groupes.html
 ---
-<h1 property="name" id="wb-cont">Groupes de code source ouvert</h1>
-<p>Les administrations publiques canadiennes au niveau fédéral, provincial, territorial et municipal utilisent Github, Gitlab et d'autres référentiels de codes pour contribuer au code source ouvert.</p>
+<h1 property="name" id="wb-cont">Liste des répertoires par administration publique</h1>
+<p>Consultez la liste des répertoires de code source ouvert des administrations publiques canadiennes, du niveau fédéral, provincial, municipal et autochtone.</p>
 
 {% include codeRepoGroups.html %}
