Feature/future projects (#783)
* Baseline for future project pages & templates

* Added missing pieces & base JS

* Fixed json file path in partnership form

* Fixed partners new Admin & minor changes in partnership form JS

* improved schema pages

* Updated partnership form link in doc

* Correction on partnership schema

* Partnership lightbox & minor corrections

* Minor corrections & texts/translations

--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -11,103 +11,83 @@ permalink: /en/docs.html
 
   <div class="col-md-12">
     <h2>How to use the Open Resource Exchange platform</h2>
-    <p>
-      The Open Resource Exchange platform offers three services based on open source solutions developed and used by canadian public administrations.
-      The following documentation acts as a user guide, providing information and instructions on how to benefit from each offered service.
-    </p>
+    <p>The Open Resource Exchange platform offers three services based on open source solutions developed and used by canadian public administrations. The following documentation acts as a user guide, providing information and instructions on how to benefit from each offered service.</p>
     <ul class="list-unstyled">
       <li>
         <details>
           <summary>Open Source Code</summary>
-          <p>
-            This service offers a sharing space for open source codes developed by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).
-          </p>
-          <p>
-            You will find a catalog of all the available open source projects, where each project is described by the following fields:
-          </p>
-          <ul>
+          <p>This service offers a sharing space for open source codes developed by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).</p>
+          <p>You will find a catalog of all the available open source projects, where each project is described by the following fields:</p>
+          <ul class="mrgn-bttm-lg">
             <li><strong>Project name</strong>: The name of the open source code. A hyperlink is available providing more information on the project, such as the name of the administration who developed the project, the project creation date, its license, etc.</li>
             <li><strong>Category</strong>: The software category to which the open source code belongs, according to the project activity domain. Categories available for this field correspond to the family of Softwares of the 2019-UNSPSC Taxonomy Codes.</li>
             <li><strong>Description</strong>: A brief description of the program features.</li>
             <li><strong>License</strong>: The license under which the project is released. Use the hyperlink to access the licence’s file, located usually in the project public repository.</li>
             <li><strong>Code repo</strong>: The public repository of the project, where the open source code is hosted (for example GitHub, GitLab, BitBucket etc.).</li>
-          </ul><br>
-          <p>
-            <strong>Use this catalog</strong> to find open digital solutions that fit your specific needs. To help you with the research process, filtering options are available:<br>
-          </p>
-          <ul>
+          </ul>
+          <p><strong>Use this catalog</strong> to find open digital solutions that fit your specific needs. To help you with the research process, filtering options are available:</p>
+          <ul class="mrgn-bttm-lg">
             <li>You can filter the projects according to a list of filtering options such as the level of government, the public administration, etc.</li>
             <li>You can also filter the names and descriptions of the source codes by entering a sentence, a word or a letter in the "Filter items" input.</li>
-          </ul><br>
-          <p>
-            <strong>How to share a new open source code or update the information of a project that is already available in the catalog</strong>
-          </p>
-          <p>
-            Whether you’re an administration that already has projects in the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new solution or updating the information of an existing one, using the <a href="./open-source-code-form.html">Open Source Code Form</a>.
-            The form will allow us to identify your request, analyze it and execute it.
-          </p>
+          </ul>
+          <p><strong>How to share a new open source code or update the information of a project that is already available in the catalog</strong></p>
+          <p>Whether you’re an administration that already has projects in the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new solution or updating the information of an existing one, using the <a href="./open-source-code-form.html">Open Source Code Form</a>. The form will allow us to identify your request, analyze it and execute it.</p>
         </details>
       </li>
       <li>
         <details>
           <summary>Open Source Software</summary>
-          <p>
-            This service offers a sharing space for open source software used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).
-          </p>
-          <p>
-            You will find a catalog of all the available open source software, where each software is described by the following fields:
-          </p>
-          <ul>
+          <p>This service offers a sharing space for open source software used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).</p>
+          <p>You will find a catalog of all the available open source software, where each software is described by the following fields:</p>
+          <ul class="mrgn-bttm-lg">
             <li><strong>Software</strong>: The name of the open source software. A hyperlink is available providing a list of public administrations using this software.</li>
             <li><strong>Category</strong>: The software category to which the open source software belongs, according to the software activity domain. Categories available for this field correspond to the family of Softwares of the 2019-UNSPSC Taxonomy Codes.</li>
             <li><strong>Description</strong>: A brief description of the software features.</li>
             <li><strong>License</strong>: The license under which the software is released. Use the hyperlink to access the licence’s file, located usually in the project public repository.</li>
             <li><strong>Usage</strong>: The number of public administrations using the open source software.</li>
-          </ul><br>
-          <p>
-            <strong>Use this catalog</strong> to find open digital solutions that fit your specific needs. To help you with the research process, filtering options are available:<br>
-          </p>
-          <ul>
+          </ul>
+          <p><strong>Use this catalog</strong> to find open digital solutions that fit your specific needs. To help you with the research process, filtering options are available:</p>
+          <ul class="mrgn-bttm-lg">
             <li>You can filter the projects according to a list of filtering options such as the level of government, the license, etc.</li>
             <li>You can also filter the names and descriptions of the source software by entering a sentence, a word or a letter in the "Filter items" input.</li>
-          </ul><br>
-          <p>
-            <strong>How to share a new open source software or update the information of a project that is already available in the catalog</strong>
-          </p>
-          <p>
-            Whether you’re an administration that already added the open source software it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open source software or updating the information of an existing one, using the <a href="./open-source-software-form.html">Open Source Software Form</a>.
-            The form will allow us to identify your request, analyze it and execute it.
-          </p>
+          </ul>
+          <p><strong>How to share a new open source software or update the information of a project that is already available in the catalog</strong></p>
+          <p>Whether you’re an administration that already added the open source software it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open source software or updating the information of an existing one, using the <a href="./open-source-software-form.html">Open Source Software Form</a>. The form will allow us to identify your request, analyze it and execute it.</p>
         </details>
       </li>
       <li>
         <details>
           <summary>Open Standards</summary>
-          <p>
-            This service offers a sharing space for open standards used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).
-          </p>
-          <p>
-            You will find a catalog of all the available open standards, where each standard is described by the following fields:
-          </p>
-          <ul>
+          <p>This service offers a sharing space for open standards used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).</p>
+          <p>You will find a catalog of all the available open standards, where each standard is described by the following fields:</p>
+          <ul class="mrgn-bttm-lg">
             <li><strong>Standard</strong>: The name of the standard. A hyperlink is available providing a list of public administrations using this standard.</li>
             <li><strong>Description</strong>: A brief description of the standard.</li>
             <li><strong>Standard-Setting Organization</strong>: The organization developing, coordinating, promulgating, revising, amending, reissuing, interpreting or producing the standard. Use the hyperlink to access the specification of the standard.</li>
-          </ul><br>
-          <p>
-            <strong>Use this catalog</strong> to find open standards that could help you develop a system that works and communicates with other systems, and ensure an easy upgrade and expansion. To help you with the research process, filtering options are available:<br>
-          </p>
-          <ul>
+          </ul>
+          <p><strong>Use this catalog</strong> to find open standards that could help you develop a system that works and communicates with other systems, and ensure an easy upgrade and expansion. To help you with the research process, filtering options are available:</p>
+          <ul class="mrgn-bttm-lg">
             <li>You can filter the standards according to the level of government or/and the tag.</li>
             <li>You can also filter the names and descriptions of the standards by entering a sentence, a word or a letter in the "Filter items" input.</li>
-          </ul><br>
-          <p>
-            <strong>How to share a new open standard or update the information of a standard that is already available in the catalog</strong>
-          </p>
-          <p>
-            Whether you’re an administration that already added the open standard it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open standard or updating the information of an existing one, using <a href="./open-standard-form.html">the Open Standards Form</a>.
-            The form will allow us to identify your request, analyze it and execute it.
-          </p>
+          </ul>
+          <p><strong>How to share a new open standard or update the information of a standard that is already available in the catalog</strong></p>
+          <p>Whether you’re an administration that already added the open standard it’s using to the catalog, or an administration that wishes to start sharing its open source content, you're free to update the open resource exchange catalog, by adding a new open standard or updating the information of an existing one, using <a href="./open-standard-form.html">the Open Standards Form</a>. The form will allow us to identify your request, analyze it and execute it.</p>
+        </details>
+      </li>
+      <li>
+        <details>
+          <summary>Partnerships</summary>
+          <p>This service offers a sharing space for public administrations looking for investors and partners to collaborate on the development of their open source project idea. Putting together efforts and resources to develop a digital solution for a shared need is beneficial to all stakeholders.</p>
+          <p>This platform provides a list of projects shared by different levels of canadian public administrations (federal, provincial, municipal and aboriginal) looking for investors and partners, where each project is described by the the following fields:</p>
+          <ul class="mrgn-bttm-lg">
+            <li><strong>Project name</strong>: The name of the project. The hyperlink displays information about the project such as the contact information of public administration proposing the project and a list of the current partners</li>
+            <li><strong>Category</strong>: The category to which the project belongs according to its activity domain. Categories available for this field correspond to the family of Softwares of the 2019-UNSPSC Taxonomy Codes.</li>
+            <li><strong>Description</strong>: A brief description of the project features.</li>
+            <li><strong>End date</strong>: The date after which the public administration will no longer be looking for partners for its project.</li>
+          </ul>
+          <p>Search this catalogue for project ideas aligned with your objectives and needs. <strong>If you’re interested in becoming a partnering group</strong> on a specific project, contact the public administration that owns the project. You can find the contact information using the hyperlink of the project’s name.</p>
+          <p><strong>How to add a new project or update the information of a project in the catalog</strong></p>
+          <p>Whether you’re an administration looking for partners and investors to collaborate on your new project or an administration that already added its project to the catalog, you're free to update the list of open projects by submitting the <a href="./partnership-form.html">Looking for Partners Form</a>. The form will allow us to identify your request of adding or updating a project, analyze it and execute it</p>
         </details>
       </li>
     </ul>
