--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -18,55 +18,77 @@ permalink: /en/index.html
 <div class="row profile">
   <div class="col-md-12">
     <h1 property="name">Services</h1>
-    <p>The Open Resource Exchange includes three main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
-  </div>
-  <div class="col-md-4">
-    <section class="panel panel-info">
-      <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Code</h5></a>
-      </header>
-      <div class="panel-body mrgn-bttm-md">
-        <div class="col-md-3 font-size-50" style="color: #31708f">
-          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
-        </div>
-        <div class="col-md-9">
-          <p>Search open source projects developed by Canadian public administrations.</p>
-        </div>
-      </div>
-    </section>
+    <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to publicly accessible items that are freely available for use.</p>
   </div>
 
-  <div class="col-md-4">
-    <section class="panel panel-success">
-      <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Software</h5></a>
-      </header>
-      <div class="panel-body mrgn-bttm-md">
-        <div class="col-md-3 font-size-50" style="color: #3c763d">
-          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
+  <div class="row wb-eqht">
+    <div class="col-md-6">
+      <section class="panel panel-info hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Code</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #31708f">
+            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-code"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search open source projects developed by Canadian public administrations.</p>
+          </div>
         </div>
-        <div class="col-md-9">
-          <p>Search open source software used by Canadian public administrations.</p>
+      </section>
+    </div>
+
+    <div class="col-md-6">
+      <section class="panel panel-success hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Software</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #3c763d">
+            <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}" class="panel-design"><i class="fa fa-cog"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search open source software used by Canadian public administrations.</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
 
-  <div class="col-md-4">
-    <section class="panel panel-warning">
-      <header class="panel-heading">
-        <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Standards</h5></a>
-      </header>
-      <div class="panel-body mrgn-bttm-xl">
-        <div class="col-md-3 font-size-50" style="color: #8a6d3b">
-          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
+  <div class="row wb-eqht">
+    <div class="col-md-6">
+      <section class="panel panel-warning hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Standards</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #8a6d3b">
+            <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><i class="glyphicon glyphicon-list-alt"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search open standards used by Canadian public administrations.</p>
+          </div>
         </div>
-        <div class="col-md-9">
-          <p>Search open standards used by Canadian public administrations.</p>
+      </section>
+    </div>
+
+    <div class="col-md-6">
+      <section class="panel panel-danger hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Partnerships</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #a94442">
+            <a href="{{ site.data.i18n.general.nav.partnership.link[page.lang] }}" class="panel-design"><i class="far fa-handshake"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search and collaborate on open source projects looking for partners and investors.</p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </div>
+
   <div class="col-md-12">
     <p>You can check our <strong>user guide</strong> on <a href="./docs.html">how to use the Open Resource Exchange platform</a> to help you search for open digital solutions and share new open projects.</p>
   </div>
