--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -57,6 +57,40 @@ permalink: /en/index.html
 
   <div class="row wb-eqht">
     <div class="col-md-6">
+      <section class="panel panel-info hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source UI/UX</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #31708f">
+            <a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search open source UI/UX developed by Canadian public administrations.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="col-md-6">
+      <section class="panel panel-success hght-inhrt">
+        <header class="panel-heading">
+          <a href="{{ site.data.i18n.general.nav.research.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Research</h5></a>
+        </header>
+        <div class="panel-body">
+          <div class="col-md-3 font-size-50" style="color: #3c763d">
+            <a href="{{ site.data.i18n.general.nav.research.link[page.lang] }}" class="panel-design"><i class="fa fa-book-reader"></i></a>
+          </div>
+          <div class="col-md-9">
+            <p>Search open source research used by Canadian public administrations.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+
+  <div class="row wb-eqht">
+    <div class="col-md-6">
       <section class="panel panel-warning hght-inhrt">
         <header class="panel-heading">
           <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Standards</h5></a>
