--- a/_pages/en/open-design.html
+++ b/_pages/en/open-design.html
@@ -2,16 +2,15 @@
 layout: default
 ref: research
 lang: en
-permalink: /en/open-researches.html
+permalink: /en/open-design.html
 ---
 
-<!-- TODO: change link to open-research-form + add definition for research -->
-<h1 property="name" id="wb-cont">Open Research</h1>
+<h1 property="name" id="wb-cont">Open Design</h1>
 <p>Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
 <p>Search the catalog for research by different levels of Canadian public administrations.</p>
 <p>You may also <strong>add</strong> a research or <strong>update</strong> its data using using the <a href="./open-research-form.html">Open Research Form</a>.</p>
 <p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
 
-{% include researchTable.html %}
+{% include designTable.html %}
 
 <p>Data is also made available in <a href="../code.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
