--- a/_pages/fr/design-libre.html
+++ b/_pages/fr/design-libre.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-ref: research
+ref: design
 lang: fr
-permalink: /fr/recherches-libres.html
+permalink: /fr/design-libres.html
 ---
 
-<h1 property="name" id="wb-cont">Recherches libres</h1>
+<h1 property="name" id="wb-cont">Design libres</h1>
 <p>Un logiciel libre est un logiciel dont le développement de son code source suit un processus ouvert. La licence du logiciel permet d’accéder librement à son code source, de créer des travaux dérivés et de le redistribuer.</p>
 <p>Consultez la liste des logiciels libres utilisés par les administrations publiques canadiennes.</p>
 <p>Vous pouvez <strong>ajouter</strong> un logiciel ou <strong>modifier</strong> ses informations en utilisant le <a href="./recherche-libre-formulaire.html">Formulaire de Recherche Libre</a>.</p>
 <p class="mrgn-bttm-md"><strong>Besoin d’aide?</strong> Consultez la documentation sur <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">comment utiliser la plateforme Échange de Ressources Ouvert</a>.</p>
 
-{% include researchTable.html %}
+{% include designTable.html %}
 
-<p>Les données sont aussi rendu disponible en <a href="../research.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
+<p>Les données sont aussi rendu disponible en <a href="../design.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
