Added Open Design

--- a/_pages/fr/design-libre.html
+++ b/_pages/fr/design-libre.html
@@ -2,7 +2,7 @@
 layout: default
 ref: design
 lang: fr
-permalink: /fr/design-libres.html
+permalink: /fr/design-libre.html
 ---
 
 <h1 property="name" id="wb-cont">Design libres</h1>
