--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -59,14 +59,14 @@ permalink: /en/index.html
     <div class="col-md-6">
       <section class="panel panel-info hght-inhrt">
         <header class="panel-heading">
-          <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Source Design</h5></a>
+          <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><h5 class="panel-title">Open Design Resources</h5></a>
         </header>
         <div class="panel-body">
           <div class="col-md-3 font-size-50" style="color: #31708f">
             <a href="{{ site.data.i18n.general.nav.design.link[page.lang] }}" class="panel-design"><i class="fas fa-palette"></i></a>
           </div>
           <div class="col-md-9">
-            <p>Search open source design developed by Canadian public administrations.</p>
+            <p>Search open design resources developed by Canadian public administrations.</p>
           </div>
         </div>
       </section>
