--- a/_pages/en/open-design-form.html
+++ b/_pages/en/open-design-form.html
@@ -6,5 +6,5 @@ permalink: /en/open-design-form.html
 config: config-design
 ---
 
-<h1 property="name" id="wb-cont">Open Design Form</h1>
-<p>Fill out this form to add or update information on research done by Canadian public administrations. Please note that some fields are required in both English and French languages, as to support the collaboration and sharing of open source solutions between all provinces and territories across Canada.</p>
+<h1 property="name" id="wb-cont">Open Design Resource Form</h1>
+<p>Fill out this form to add or update information on open design resource done by Canadian public administrations. Please note that some fields are required in both English and French languages, as to support the collaboration and sharing of open source solutions between all provinces and territories across Canada.</p>
