--- a/_pages/en/open-design.html
+++ b/_pages/en/open-design.html
@@ -5,10 +5,10 @@ lang: en
 permalink: /en/open-design.html
 ---
 
-<h1 property="name" id="wb-cont">Open Design</h1>
-<p>Open source code commonly refers to a software that is released under a license granting anyone permission to use, modify, change or redistribute the code for any purpose. This open source process is an example of open collaboration where everyone benefits from the development of technological tools that solve real issues.</p>
-<p>Search the catalog for research by different levels of Canadian public administrations.</p>
-<p>You may also <strong>add</strong> a research or <strong>update</strong> its data using using the <a href="./open-design-form.html">Open Design Form</a>.</p>
+<h1 property="name" id="wb-cont">Open Design Resources</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sodales ut eu sem integer vitae justo eget magna. Lobortis scelerisque fermentum dui faucibus in ornare.</p>
+<p>Search the catalog for open design resource by different levels of Canadian public administrations.</p>
+<p>You may also <strong>add</strong> a resource or <strong>update</strong> its data using using the <a href="./open-design-form.html">Open Design Resource Form</a>.</p>
 <p class="mrgn-bttm-md"><strong>Need help?</strong> Check our user guide on <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">how to use the Open Resource Exchange platform</a>.</p>
 
 {% include designTable.html %}
