--- a/_pages/en/open-research-schema.html
+++ b/_pages/en/open-research-schema.html
@@ -1,6 +1,6 @@
 ---
 layout: form
-ref: researchForm
+ref: researchSchema
 lang: en
 permalink: /en/open-research-schema.html
 config: config-research
