--- a/_pages/fr/recherche-libre-schema.html
+++ b/_pages/fr/recherche-libre-schema.html
@@ -1,6 +1,6 @@
 ---
 layout: form
-ref: researchForm
+ref: researchSchema
 lang: fr
 permalink: /fr/recherche-libre-schema.html
 config: config-research
