--- a/_pages/en/open-source-code-groups.html
+++ b/_pages/en/open-source-code-groups.html
@@ -5,6 +5,6 @@ lang: en
 permalink: /en/open-source-code-groups.html
 ---
 <h1 property="name" id="wb-cont">List of repositories per public administration</h1>
-<p>Search the list of open source repositories of canadian public administrations at the federal, provincial, municipal and aboriginal levels.</p>
+<p>Search the list of open source repositories of Canadian public administrations at the federal, provincial, municipal and aboriginal levels.</p>
 
 {% include codeRepoGroups.html %}
