--- a/_pages/en/partnership-form.html
+++ b/_pages/en/partnership-form.html
@@ -7,4 +7,4 @@ config: config-partnership
 ---
 
 <h1 property="name" id="wb-cont">Looking for Partners Form</h1>
-<p>Sharing your project idea on this platform can help you find partners and investors to collaborate on the projet. Fill out this form to add a new project or update its data in case the project was already in the catalog. Please note that some fields are required in both English and French languages, as to support the collaboration and sharing of open source solutions between all provinces and territories across Canada.</p>
+<p>Sharing your project idea on this platform can help you find partners and investors to collaborate on the project. Fill out this form to add a new project or update its data in case the project was already in the catalog. Please note that some fields are required in both English and French languages, as to support the collaboration and sharing of open source solutions between all provinces and territories across Canada.</p>
