--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -11,12 +11,12 @@ permalink: /en/docs.html
 
   <div class="col-md-12">
     <h2>How to use the Open Resource Exchange platform</h2>
-    <p>The Open Resource Exchange platform offers three services based on open source solutions developed and used by canadian public administrations. The following documentation acts as a user guide, providing information and instructions on how to benefit from each offered service.</p>
+    <p>The Open Resource Exchange platform offers three services based on open source solutions developed and used by Canadian public administrations. The following documentation acts as a user guide, providing information and instructions on how to benefit from each offered service.</p>
     <ul class="list-unstyled">
       <li>
         <details>
           <summary>Open Source Code</summary>
-          <p>This service offers a sharing space for open source codes developed by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).</p>
+          <p>This service offers a sharing space for open source codes developed by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).</p>
           <p>You will find a catalog of all the available open source projects, where each project is described by the following fields:</p>
           <ul class="mrgn-bttm-lg">
             <li><strong>Project name</strong>: The name of the open source code. A hyperlink is available providing more information on the project, such as the name of the administration who developed the project, the project creation date, its license, etc.</li>
@@ -37,7 +37,7 @@ permalink: /en/docs.html
       <li>
         <details>
           <summary>Open Source Software</summary>
-          <p>This service offers a sharing space for open source software used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).</p>
+          <p>This service offers a sharing space for open source software used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).</p>
           <p>You will find a catalog of all the available open source software, where each software is described by the following fields:</p>
           <ul class="mrgn-bttm-lg">
             <li><strong>Software</strong>: The name of the open source software. A hyperlink is available providing a list of public administrations using this software.</li>
@@ -58,7 +58,7 @@ permalink: /en/docs.html
       <li>
         <details>
           <summary>Open Standards</summary>
-          <p>This service offers a sharing space for open standards used by different levels of canadian public administrations (federal, provincial, municipal and aboriginal).</p>
+          <p>This service offers a sharing space for open standards used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).</p>
           <p>You will find a catalog of all the available open standards, where each standard is described by the following fields:</p>
           <ul class="mrgn-bttm-lg">
             <li><strong>Standard</strong>: The name of the standard. A hyperlink is available providing a list of public administrations using this standard.</li>
@@ -78,7 +78,7 @@ permalink: /en/docs.html
         <details>
           <summary>Partnerships</summary>
           <p>This service offers a sharing space for public administrations looking for investors and partners to collaborate on the development of their open source project idea. Putting together efforts and resources to develop a digital solution for a shared need is beneficial to all stakeholders.</p>
-          <p>This platform provides a list of projects shared by different levels of canadian public administrations (federal, provincial, municipal and aboriginal) looking for investors and partners, where each project is described by the the following fields:</p>
+          <p>This platform provides a list of projects shared by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal) looking for investors and partners, where each project is described by the the following fields:</p>
           <ul class="mrgn-bttm-lg">
             <li><strong>Project name</strong>: The name of the project. The hyperlink displays information about the project such as the contact information of public administration proposing the project and a list of the current partners</li>
             <li><strong>Category</strong>: The category to which the project belongs according to its activity domain. Categories available for this field correspond to the family of Softwares of the 2019-UNSPSC Taxonomy Codes.</li>
